--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/finder": "^4.2",
         "symfony/http-foundation": "^4.2",
         "symfony/console": "^4.2",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "symfony/routing": "^4.2"
     }
 }
