--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         "symfony/console": "^4.2",
         "guzzlehttp/guzzle": "~6.0",
         "symfony/routing": "^4.2"
+    },
+    "require-dev": {
+        "symfony/dotenv": "^4.2"
     }
 }
